--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                 <p class="weather">--</p>
             </div>
             <div class="search">
-                <input type="text" id="search" autocomplete="off" name="search" placeholder="Tìm kiếm [Bấm phím bất kỳ]">
+                <input type="text" id="search" autocomplete="off" name="search"
+                    placeholder="Tìm kiếm [Bấm phím bất kỳ]">
                 <button id="clear"><img src="./image/close.png" alt=""></button>
             </div>
         </div>
@@ -72,7 +73,7 @@
                 <div class="select-API">
                     <button class="choose-API">
                         <p class="API-name">Chọn nguồn ảnh</p>
-                        <img src="./image/down.png" alt="down"> 
+                        <img src="./image/down.png" alt="down">
                     </button>
                     <div class="API-select-box">
                         <button class="API-option" id="api_none">Không có</button>
@@ -159,5 +160,4 @@
     </div>
 </body>
 <script src="script.js"></script>
-
 </html>
