Fix some minor bug

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                     </button>
                     <div class="API-select-box">
                         <button class="API-option" id="api_none">Không có</button>
+                        <button class="API-option" id="api_local">Hình nền cục bộ</button>
                         <button class="API-option" id="api_picrew">Anime Wallpapers</button>
                     </div>
                 </div>
@@ -85,6 +86,10 @@
                     <button id="picre-changewall">Đổi hình nền</button>
                     <button id="picre-pixiv">Xem hình trên Pixiv</button>
                     <button id="picre-download">Tải hình nền</button>
+                </div>
+                <div class="localimage">
+                    <button id="pick-image">Chọn hình nền</button>
+                    <input type="file" id="fileInput" style="display: none;" accept="image/*">
                 </div>
             </div>
         </div>
