--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="new-tab setting-tabs">
             <div class="tab-title">Tiêu đề Tab</div>
             <div class="tab-content">
-                <input type="text" id="new-tab-title" placeholder="Enter để lưu">
+                <input type="text" id="new-tab-title" placeholder="Enter để lưu tiêu đề">
             </div>
         </div>
 
@@ -157,9 +157,12 @@
             <div class="tab-content">
                 <p style="font-size: 1.2em;">Wibi New Tab <span style="font-size: 0.7em;">v1.1.4</span></p>
                 <p>By @Natelyt</p>
+                <p style="font-size: 0.9em;">Lấy cảm hứng từ Phigros UI, tối giản, giới thiệu hình nền.</p>
                 <hr>
-                <p>Ctrl + Z để mở/đóng menu</p>
-                <p>Hãy để thu phóng trang 90% hoặc 80% để có một cái nhìn tốt hơn</p>
+                <p>
+                    Ctrl + Z để mở/đóng menu <br>
+                    Hãy để thu phóng trang 90% hoặc 80% để có một cái nhìn tốt hơn
+                </p>
                 <hr>
                 <p style="font-size: 0.8em;">All the API used in this project: <br>
                     Anime Walls: <a href="https://pic.re">Pic.re</a><br>
