--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <div class="tab-title">Info</div>
             <div class="tab-content">
                 <p style="font-size: 1.2em;">Wibi New Tab <span style="font-size: 0.7em;">v1.1.4</span></p>
-                <p>By @Natelyt</p>
+                <p>By @Phucthanhh</p>
                 <p style="font-size: 0.9em;">Lấy cảm hứng từ Phigros UI, tối giản, giới thiệu hình nền.</p>
                 <hr>
                 <p>
