--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 <body>
     <div class="bg-img">
+        <div class="background_blur"></div>
         <div class="image"></div>
         <div class="loader">
             <svg viewBox="25 25 50 50" class="circular">
@@ -35,9 +36,9 @@
             <div class="weather-info">
                 <div class="icon-container">
                     <div class="icon"></div>
-                    <p class="temp">--</p>
+                    <p class="temp">__</p>
                 </div>
-                <p class="weather">--</p>
+                <p class="weather">Đang lấy dữ liệu</p>
             </div>
             <div class="search">
                 <input type="text" id="search" autocomplete="off" name="search" placeholder="Tìm kiếm [Nhập bất kỳ]">
@@ -77,7 +78,8 @@
                     <div class="API-select-box">
                         <button class="API-option" id="api_none">Không có</button>
                         <button class="API-option" id="api_local">Hình nền cục bộ</button>
-                        <button class="API-option" id="api_picrew">Anime Wallpapers</button>
+                        <button class="API-option" id="api_picsum">Lorem Picsum</button>
+                        <button class="API-option" id="api_picrew">Picrew</button>
                     </div>
                 </div>
                 <hr style="padding: 0;margin: 5px 0;border:1px solid rgba(255, 255, 255, 0.3);">
@@ -90,6 +92,9 @@
                 <div class="localimage">
                     <button id="pick-image">Chọn hình nền</button>
                     <input type="file" id="fileInput" style="display: none;" accept="image/*">
+                </div>
+                <div class="picsum">
+                    <button id="picsum-changewall">Đổi hình nền</button>
                 </div>
             </div>
         </div>
@@ -108,6 +113,19 @@
                     <input type="checkbox" class="checksvg" id="fullview" style="display: none;">
                     <label for="fullview" class="check">
                         <p style="padding: 0;margin: 0;">Full view</p>
+                        <svg width="18px" height="18px" viewBox="0 0 18 18">
+                            <path
+                                d="M1,9 L1,3.5 C1,2 2,1 3.5,1 L14.5,1 C16,1 17,2 17,3.5 L17,14.5 C17,16 16,17 14.5,17 L3.5,17 C2,17 1,16 1,14.5 L1,9 Z">
+                            </path>
+                            <polyline points="1 9 7 14 15 4"></polyline>
+                        </svg>
+                    </label>
+                </div>
+                <!-- bg moving -->
+                <div class="checkbox movebgtoggle">
+                    <input type="checkbox" class="checksvg" id="move_bg_toggle" style="display: none;">
+                    <label for="move_bg_toggle" class="check">
+                        <p style="padding: 0;margin: 0;">Chạy animation nền</p>
                         <svg width="18px" height="18px" viewBox="0 0 18 18">
                             <path
                                 d="M1,9 L1,3.5 C1,2 2,1 3.5,1 L14.5,1 C16,1 17,2 17,3.5 L17,14.5 C17,16 16,17 14.5,17 L3.5,17 C2,17 1,16 1,14.5 L1,9 Z">
@@ -145,9 +163,9 @@
             <div class="tab-content">
                 <button class="del-local">Đặt lại</button>
                 <div class="del-confirm">
-                    <p style="padding: 0;margin: 0;text-align: center;">Are you sure about that?</p>
-                    <button class="del-yes">Yes</button>
-                    <button class="del-no">No</button>
+                    <p style="padding: 0;margin: 0;text-align: center;font-size: 0.8em;">Mục chọn API hình nền sẽ không bị đặt lại, tùy chọn này sẽ chỉ đặt lại cài đặt của bạn, tiếp tục?</p>
+                    <button class="del-yes">OK</button>
+                    <button class="del-no">Không</button>
                 </div>
             </div>
         </div>
@@ -155,7 +173,7 @@
         <div class="info setting-tabs">
             <div class="tab-title">Info</div>
             <div class="tab-content">
-                <p style="font-size: 1.2em;">Wibi New Tab <span style="font-size: 0.7em;">v1.1.4</span></p>
+                <p style="font-size: 1.2em;">Wibi New Tab <span style="font-size: 0.7em;">v1.5</span></p>
                 <p>By @Phucthanhh</p>
                 <p style="font-size: 0.9em;">Lấy cảm hứng từ Phigros UI, tối giản, giới thiệu hình nền.</p>
                 <hr>
@@ -172,6 +190,7 @@
             </div>
         </div>
     </div>
+
 </body>
 <script src="script.js"></script>
 
