--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
         <img class="opt-btn-img" src="./image/setting.png" alt="settings">
     </button>
 
+    <div class="alert-box-bg">
+        <div class="alert-box">
+            <p class="alert-title">Cảnh báo</p>
+            <p id="alert-content"></p>
+            <button class="alert-proceed">Tiếp tục</button>
+            <button class="alert-close">Hủy</button>
+        </div>
+    </div>
+
     <div class="settings">
         <!-- Error -->
         <div class="error-display setting-tabs">
@@ -78,8 +87,9 @@
                     <div class="API-select-box">
                         <button class="API-option" id="api_none">Không có</button>
                         <button class="API-option" id="api_local">Hình nền cục bộ</button>
+                        <button class="API-option" id="api_video">Video cục bộ</button>
                         <button class="API-option" id="api_picsum">Lorem Picsum</button>
-                        <button class="API-option" id="api_picrew">Picrew</button>
+                        <button class="API-option" id="api_picrew">Picre</button>
                     </div>
                 </div>
                 <hr style="padding: 0;margin: 5px 0;border:1px solid rgba(255, 255, 255, 0.3);">
@@ -176,7 +186,7 @@
         <div class="info setting-tabs">
             <div class="tab-title">Info</div>
             <div class="tab-content" style="font-size: 0.9em;">
-                <p style="font-size: 1.2em;">Wibi New Tab <span style="font-size: 0.7em;">v1.6</span></p>
+                <p style="font-size: 1.2em;">Wibi New Tab <span style="font-size: 0.7em;">v1.7</span></p>
                 <p>By @Phucthanhh</p>
                 <p>Lấy cảm hứng từ Phigros UI, tối giản, giới thiệu hình nền.</p>
                 <hr>
