--- a/index.html
+++ b/index.html
@@ -170,15 +170,18 @@
             </div>
         </div>
 
+        <div class="new-tab setting-tabs">
+            <div class="tab-title">Thời tiết</div>
+            <div class="tab-content">
+                <input type="text" id="weather-input" placeholder="Enter để lưu địa điểm" value="Hà Nội">
+            </div>
+        </div>
+
         <div class="setting-tabs">
             <div class="tab-title">Gỡ lỗi</div>
             <div class="tab-content">
                 <button class="del-local">Đặt lại</button>
-                <div class="del-confirm">
-                    <p style="padding: 0;margin: 0;text-align: center;font-size: 0.8em;">Đặt lại tất cả về mặc định chứ?</p>
-                    <button class="del-yes">OK</button>
-                    <button class="del-no">Không</button>
-                </div>
+                <button class="clear-cache">Xóa cache</button>
                 <p style="opacity: 0.5;font-size: 0.8em;margin: 0;padding: 0;">Last fetch: <span id="cache_status">NaN</span></p>
             </div>
         </div>
@@ -186,7 +189,7 @@
         <div class="info setting-tabs">
             <div class="tab-title">Info</div>
             <div class="tab-content" style="font-size: 0.9em;">
-                <p style="font-size: 1.2em;">Wibi New Tab <span style="font-size: 0.7em;">v1.7</span></p>
+                <p style="font-size: 1.2em;">Wibi New Tab <span style="font-size: 0.7em;">v1.7.1</span></p>
                 <p>By @Phucthanhh</p>
                 <p>Lấy cảm hứng từ Phigros UI, tối giản, giới thiệu hình nền.</p>
                 <hr>
