--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <div class="alert-box-bg">
         <div class="alert-box">
-            <p class="alert-title">Cảnh báo</p>
+            <p class="alert-title">Thông báo</p>
             <p id="alert-content"></p>
             <button class="alert-proceed">Tiếp tục</button>
             <button class="alert-close">Hủy</button>
@@ -87,7 +87,6 @@
                     <div class="API-select-box">
                         <button class="API-option" id="api_none">Không có</button>
                         <button class="API-option" id="api_local">Hình nền cục bộ</button>
-                        <button class="API-option" id="api_video">Video cục bộ</button>
                         <button class="API-option" id="api_picsum">Lorem Picsum</button>
                         <button class="API-option" id="api_picrew">Picre</button>
                     </div>
@@ -105,6 +104,7 @@
                 </div>
                 <div class="picsum">
                     <button id="picsum-changewall">Đổi hình nền</button>
+                    <button id="picsum-download">Tải hình nền</button>
                 </div>
             </div>
         </div>
@@ -181,7 +181,7 @@
             <div class="tab-title">Gỡ lỗi</div>
             <div class="tab-content">
                 <button class="del-local">Đặt lại</button>
-                <button class="clear-cache">Xóa cache</button>
+                <button class="clear-cache">Fetch lại thông tin</button>
                 <p style="opacity: 0.5;font-size: 0.8em;margin: 0;padding: 0;">Last fetch: <span id="cache_status">NaN</span></p>
             </div>
         </div>
@@ -189,7 +189,7 @@
         <div class="info setting-tabs">
             <div class="tab-title">Info</div>
             <div class="tab-content" style="font-size: 0.9em;">
-                <p style="font-size: 1.2em;">Wibi New Tab <span style="font-size: 0.7em;">v1.7.1</span></p>
+                <p style="font-size: 1.2em;">Wibi New Tab <span style="font-size: 0.7em;">v1.7.2</span></p>
                 <p>By @Phucthanhh</p>
                 <p>Lấy cảm hứng từ Phigros UI, tối giản, giới thiệu hình nền.</p>
                 <hr>
