--- a/index.html
+++ b/index.html
@@ -57,9 +57,11 @@
     <div class="alert-box-bg">
         <div class="alert-box">
             <p class="alert-title">Thông báo</p>
-            <p id="alert-content"></p>
-            <button class="alert-proceed">Tiếp tục</button>
-            <button class="alert-close">Hủy</button>
+            <div class="alert-content">
+                <p id="alert-content"></p>
+                <button class="alert-proceed">Tiếp tục</button>
+                <button class="alert-close">Hủy</button>
+            </div>
         </div>
     </div>
 
@@ -188,7 +190,7 @@
 
         <div class="info setting-tabs">
             <div class="tab-title">Info</div>
-            <div class="tab-content" style="font-size: 0.9em;">
+            <div class="tab-content" style="font-size: 0.9em">
                 <p style="font-size: 1.2em;">Wibi New Tab <span style="font-size: 0.7em;">v1.7.2</span></p>
                 <p>By @Phucthanhh</p>
                 <p>Lấy cảm hứng từ Phigros UI, tối giản, giới thiệu hình nền.</p>
