--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <div class="info setting-tabs">
             <div class="tab-title">Info</div>
             <div class="tab-content" style="font-size: 0.9em">
-                <p style="font-size: 1.2em;">Wibi New Tab <span style="font-size: 0.7em;">v1.7.2</span></p>
+                <p style="font-size: 1.2em;">Wibi New Tab <span id="version" style="font-size: 0.7em;"></span></p>
                 <p>By @Phucthanhh</p>
                 <p>Lấy cảm hứng từ Phigros UI, tối giản, giới thiệu hình nền.</p>
                 <hr>
