--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 <body>
     <div class="bg-img">
         <div class="background_blur"></div>
-        <div class="image"></div>
+        <div class="wavy-image">
+            <div class="image"></div>
+        </div>
         <div class="loader">
             <svg viewBox="25 25 50 50" class="circular">
                 <circle stroke-miterlimit="10" stroke-width="3" fill="none" r="20" cy="50" cx="50" class="path">
@@ -124,9 +126,9 @@
                 </div>
                 <!-- Fullscreen -->
                 <div class="checkbox">
-                    <input type="checkbox" class="checksvg" id="fullview" style="display: none;">
-                    <label for="fullview" class="check">
-                        <p style="padding: 0;margin: 0;">Full view</p>
+                    <input type="checkbox" class="checksvg" id="wavy" style="display: none;">
+                    <label for="wavy" class="check">
+                        <p style="padding: 0;margin: 0;">Wavy Animation</p>
                         <svg width="18px" height="18px" viewBox="0 0 18 18">
                             <path
                                 d="M1,9 L1,3.5 C1,2 2,1 3.5,1 L14.5,1 C16,1 17,2 17,3.5 L17,14.5 C17,16 16,17 14.5,17 L3.5,17 C2,17 1,16 1,14.5 L1,9 Z">
@@ -135,19 +137,7 @@
                         </svg>
                     </label>
                 </div>
-                <!-- bg moving -->
-                <div class="checkbox movebgtoggle">
-                    <input type="checkbox" class="checksvg" id="move_bg_toggle" style="display: none;">
-                    <label for="move_bg_toggle" class="check">
-                        <p style="padding: 0;margin: 0;">Chạy animation nền</p>
-                        <svg width="18px" height="18px" viewBox="0 0 18 18">
-                            <path
-                                d="M1,9 L1,3.5 C1,2 2,1 3.5,1 L14.5,1 C16,1 17,2 17,3.5 L17,14.5 C17,16 16,17 14.5,17 L3.5,17 C2,17 1,16 1,14.5 L1,9 Z">
-                            </path>
-                            <polyline points="1 9 7 14 15 4"></polyline>
-                        </svg>
-                    </label>
-                </div>
+                
                 <!-- Censored -->
                 <div class="checkbox">
                     <input type="checkbox" class="checksvg" id="safemode" style="display: none;">
@@ -184,7 +174,7 @@
             <div class="tab-content">
                 <button class="del-local">Đặt lại</button>
                 <button class="clear-cache">Fetch lại thông tin</button>
-                <p style="opacity: 0.5;font-size: 0.8em;margin: 0;padding: 0;">Last fetch: <span id="cache_status">NaN</span></p>
+                <p style="opacity: 0.5;font-size: 0.8em;margin: 0;padding: 0;">Cache day: <span id="cache_status">NaN</span></p>
             </div>
         </div>
 
