--- a/index.html
+++ b/index.html
@@ -43,8 +43,18 @@
                 <p class="weather">Fetching...</p>
             </div>
             <div class="search">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
+                    style="transform: scaleX(-1);">
+                    <circle cx="11" cy="11" r="7" stroke="white" stroke-width="2" />
+                    <line x1="16.65" y1="16.65" x2="21" y2="21" stroke="white" stroke-width="2" stroke-linecap="round" />
+                </svg>
                 <input type="text" id="search" autocomplete="off" name="search" placeholder="Tìm kiếm [Nhập bất kỳ]">
-                <button id="clear"><img src="./image/close.png" alt=""></button>
+                <button id="clear"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <line x1="4" y1="4" x2="20" y2="20" stroke="white" stroke-width="2" stroke-linecap="round" />
+                        <line x1="20" y1="4" x2="4" y2="20" stroke="white" stroke-width="2" stroke-linecap="round" />
+                    </svg>
+                </button>
             </div>
         </div>
         <div class="safemode-box">
@@ -54,7 +64,15 @@
 
     <div class="opt-btn-con">
         <button class="opt-btn">
-            <img class="opt-btn-img" src="./image/setting.png" alt="settings">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                    d="M12 15.5C13.933 15.5 15.5 13.933 15.5 12C15.5 10.067 13.933 8.5 12 8.5C10.067 8.5 8.5 10.067 8.5 12C8.5 13.933 10.067 15.5 12 15.5Z"
+                    stroke="white" stroke-width="2" />
+                <path
+                    d="M19.43 12.98C19.47 12.66 19.5 12.33 19.5 12C19.5 11.67 19.47 11.34 19.43 11.02L21.54 9.37C21.73 9.22 21.78 8.95 21.66 8.73L19.66 5.27C19.54 5.05 19.28 4.97 19.06 5.06L16.56 6.06C16.04 5.65 15.47 5.31 14.85 5.06L14.5 2.39C14.47 2.17 14.28 2 14.05 2H9.95C9.72 2 9.53 2.17 9.5 2.39L9.15 5.06C8.53 5.31 7.96 5.65 7.44 6.06L4.94 5.06C4.72 4.97 4.46 5.05 4.34 5.27L2.34 8.73C2.22 8.95 2.27 9.22 2.46 9.37L4.57 11.02C4.53 11.34 4.5 11.67 4.5 12C4.5 12.33 4.53 12.66 4.57 12.98L2.46 14.63C2.27 14.78 2.22 15.05 2.34 15.27L4.34 18.73C4.46 18.95 4.72 19.03 4.94 18.94L7.44 17.94C7.96 18.35 8.53 18.69 9.15 18.94L9.5 21.61C9.53 21.83 9.72 22 9.95 22H14.05C14.28 22 14.47 21.83 14.5 21.61L14.85 18.94C15.47 18.69 16.04 18.35 16.56 17.94L19.06 18.94C19.28 19.03 19.54 18.95 19.66 18.73L21.66 15.27C21.78 15.05 21.73 14.78 21.54 14.63L19.43 12.98Z"
+                    stroke="white" stroke-width="2" />
+            </svg>
+
         </button>
     </div>
 
@@ -88,7 +106,9 @@
                 <div class="select-API">
                     <button class="choose-API">
                         <p class="API-name">Chọn nguồn ảnh</p>
-                        <img src="./image/down.png" alt="down">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M6 9L12 15L18 9" stroke="white" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
                     </button>
                     <div class="API-select-box">
                         <button class="API-option" id="api_none">Không có</button>
@@ -139,7 +159,7 @@
                         </svg>
                     </label>
                 </div>
-                
+
                 <!-- Censored -->
                 <div class="checkbox">
                     <input type="checkbox" class="checksvg" id="safemode" style="display: none;">
@@ -176,7 +196,8 @@
             <div class="tab-content">
                 <button class="del-local">Đặt lại</button>
                 <button class="clear-cache">Fetch lại thông tin</button>
-                <p style="opacity: 0.5;font-size: 0.8em;margin: 0;padding: 0;">Cache day: <span id="cache_status">NaN</span></p>
+                <p style="opacity: 0.5;font-size: 0.8em;margin: 0;padding: 0;">Cache day: <span
+                        id="cache_status">NaN</span></p>
             </div>
         </div>
 
@@ -194,7 +215,6 @@
                 <p>All the API used in this project: <br>
                     Anime Walls: <a href="https://pic.re">Pic.re</a><br>
                     Weather: <a href="https://wttr.in">Wttr Weather</a><br>
-                    Âm lịch: <a href="#">Âm lịch</a><br>
                     Lorem Picsum: <a href="https://picsum.photos">Lorem Picsum</a><br>
                 </p>
             </div>
