pre1.8.2: Switch to OpenWeatherMap

--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
             <div class="tab-title">Thời tiết</div>
             <div class="tab-content">
                 <input type="text" id="weather-input" placeholder="Enter để lưu địa điểm" value="Hà Nội">
+                <p id="weather-error">Không thể lấy thông tin thời tiết</p>
                 <p class="tooltip">Nhập địa điểm của bạn ở đây để lấy dữ liệu thời tiết tại địa điểm đó. Địa điểm có thể
                     không chính xác</p>
             </div>
@@ -224,7 +225,7 @@
                 <hr>
                 <p>All the API used in this project: <br>
                     Anime Walls: <a href="https://pic.re">Pic.re</a><br>
-                    Weather: <a href="https://wttr.in">Wttr Weather</a><br>
+                    Weather: <a href="https://openweathermap.org">OpenWeatherMap</a><br>
                     Lorem Picsum: <a href="https://picsum.photos">Lorem Picsum</a><br>
                 </p>
             </div>
