pre2.0: Animation for safemode, L10n, optimize code

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <div class="settings">
         <!-- Error -->
         <div class="error-display setting-tabs">
-            <div class="tab-title">Lỗi</div>
+            <div class="tab-title">Đến giờ fix bug rồi</div>
             <div class="tab-content">
                 <p id="error-text"></p>
             </div>
@@ -110,8 +110,7 @@
                         <button class="API-option" id="api_picrew">Picre</button>
                     </div>
                 </div>
-                <hr style="padding: 0;margin: 5px 0;border:1px solid rgba(255, 255, 255, 0.3);">
-                </hr>
+
                 <div class="picre">
                     <button id="picre-changewall">Đổi hình nền</button>
                     <button id="picre-pixiv">Xem hình trên Pixiv</button>
@@ -151,7 +150,7 @@
                         </svg>
                     </label>
                 </div>
-                <p class="tooltip">Hiệu ứng rung lắc hình nền nhẹ nhàng. Nếu bật với hình nền chất lượng cao có thể gây
+                <p class="tooltip">Rung lắc hình nền nhẹ nhàng. Nếu bật với hình nền chất lượng cao có thể gây
                     lag với máy yếu</p>
                 <!-- Censored -->
                 <div class="checkbox">
